# Raziel-bot

./: .gitignore  Cargo.toml  README.md  cargo.toml  check_deps_versions.py  todo.txt
src/: main.rs
src/bot_core/: constants.rs  context.rs  db.rs
src/commands/: command_handler.rs  commands.rs  cur.rs  foxy.rs  mod.rs  uptime.rs  version.rs  whois.rs
