[package]
name = "raziel"
version = "0.5.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "default_native_tls", "model", "simd_json"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "sqlite"] }
os_info = { version = "3.7.0", default-features = false }
chrono = "0.4.31"
libc_alloc = "1.0.5"
string-builder = "0.2.0"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
rand = "0.8.5"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
