[package]
name = "raziel"
version = "0.5.7"
edition = "2021"

[dependencies]
serenity = { version = "0.12.0", default-features = false, features = ["client", "gateway", "default_native_tls", "model", "simd_json"] }
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.3", features = [ "runtime-tokio-native-tls", "sqlite"] }
os_info = { version = "3.7.0", default-features = false }
chrono = "0.4.33"
libc_alloc = "1.0.6"
string-builder = "0.2.0"
reqwest = "0.11.24"
serde = "1.0.196"
serde_json = "1.0.113"
rand = "0.8.5"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
