[package]
name = "raziel"
version = "0.5.10"
edition = "2021"

[dependencies]
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "default_native_tls", "model", "simd_json"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7.4", features = [ "runtime-tokio-native-tls", "sqlite"] }
os_info = { version = "3.8.2", default-features = false }
chrono = "0.4.38"
libc_alloc = "1.0.7"
string-builder = "0.2.0"
reqwest = "0.12.4"
serde = "1.0.203"
serde_json = "1.0.117"
rand = "0.8.5"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
